--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ python = "^3.9"
 
 typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.14.0"
+click = "7.1.2"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
